fix(discovery): format the duplicate-story similarity with Locale.ROOT
The near-duplicate 409's ProblemDetail detail carries the similarity as a
machine-parsed value (the client regexes "similarity 0.87" and shows the %).
It was formatted with the JVM default locale, so a comma-decimal locale would
emit "0,87" and the client would read the score as 0 (0%) on the duplicate
surface. Force Locale.ROOT so the decimal is always a dot.